--- a/.taq/config.json
+++ b/.taq/config.json
@@ -64,6 +64,10 @@
         {
             "type": "npm",
             "name": "@taqueria/plugin-contract-types"
+        },
+        {
+            "type": "npm",
+            "name": "@taqueria/plugin-tezos-client"
         }
     ]
 }
